sass/style.scss
@import "../node_modules/bootstrap/scss/functions",
        "../node_modules/bootstrap/scss/variables",
        "../node_modules/bootstrap/scss/mixins",
        "../node_modules/bootstrap/scss/reboot",
        "../node_modules/bootstrap/scss/containers",
        "../node_modules/bootstrap/scss/grid",
        "../node_modules/bootstrap/scss/transitions";

@font-face {
  font-family: "Neue Machina";
  font-weight: 700;
  font-style: normal;
  src: url("assets/NeueMachina-Bold.woff2") format("woff2");
}

@font-face {
  font-family: "Anicons Regular";
  font-weight: normal;
  font-style: normal;
  src: url("assets/AniconsGX.woff2") format("woff2");
}

@mixin cursor($size: 24) {
  cursor: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='" + $size + "px' height='" + $size + "px' viewBox='0 0 32 32'%3e%3ccircle cx='16' cy='16' r='16' fill='%23fd0'/%3e%3c/svg%3e") $size / 2 $size / 2, auto;
}

@mixin hover-img-scale {
  img {
    transition: .4s ease;
  }

  &:hover, &:focus, &:active {
    img {
      transform: scale(1.05);
    }
  }
}

:root {
  --primary-color: #fd0;
  --fg-color: #{$dark};
  --bg-color: #{$white};
  @include color-scheme(dark) {
    --fg-color: #{$light};
    --bg-color: #{$black};
  }
  --spacing-unit: 20px;
  @include media-breakpoint-up(md) { --spacing-unit: 40px; }
}

.row {
  --bs-gutter-x: var(--spacing-unit);
}

.col {
  @include media-breakpoint-down(sm) { flex: auto; }
}

.m-0 {
  margin: 0;
}

.mt-auto {
  margin-top: auto;
}

.d-flex {
  display: flex;
}

.flex-column-reverse {
  @include media-breakpoint-down(md) { flex-direction: column-reverse; }
}

.sticky-top {
  top: var(--spacing-unit);
  @include media-breakpoint-up(sm) {
    position: -webkit-sticky;
    position: sticky;
  }
}

.fixed-bottom {
  @media (min-height: 600px) {
    @include media-breakpoint-up(sm) { position: fixed; }
    bottom: var(--spacing-unit);
  }
}

body {
  font-family: "Neue Machina", sans-serif;
  font-weight: 700;
  // font-feature-settings: "liga" 0;
  -ms-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
  line-height: 1.2;
  color: var(--fg-color);
  background-color: var(--bg-color);
  padding: var(--spacing-unit);
  @include media-breakpoint-down(sm) { padding-top: 0; }
  @include cursor();

  ::selection {
    color: var(--fg-color);
    @include color-scheme(dark) { color: var(--bg-color); }
    background-color: var(--primary-color);
  }
}

main {
  min-height: calc(100vh - var(--footer-height) - var(--spacing-unit));
  @include media-breakpoint-up(sm) {
    min-height: calc(100vh - var(--footer-height) - var(--spacing-unit) * 2);
  }
}

h1, h2, h3 {
  -ms-hyphens: none;
  -webkit-hyphens: none;
  hyphens: none;
}

h2 {
  font-size: 1.5rem;
}

a {
  color: inherit;
  text-decoration: none;

  &:hover, &:focus, &:active {
    color: inherit;
    text-decoration-line: line-through;
    text-decoration-color: var(--primary-color);
    text-decoration-thickness: .1em;
    @include cursor(36);
  }
}

figure {
  overflow: hidden;
}

img {
  // Make svg behaves like jpg or gif. 
  width: 2000px;
  max-width: 100%;
  @include color-scheme(dark) { background-color: $gray-100; }
}

video {
  width: 100%;
}

#wrapper {
  min-width: 260px;
  max-width: 1920px;
  margin: 0 auto;
}

#sidebar-wrapper {
  min-width: 220px;
  max-width: 240px;
  z-index: 1;

  @include media-breakpoint-down(sm) {
    width: 100%;
    max-width: none;
    top: 0px;
    position: -webkit-sticky;
    position: sticky;
    background-color: var(--bg-color);
  }
}

#sidebar {
  #header {
    justify-content: space-between;
    margin-bottom: calc(var(--spacing-unit));
    @include media-breakpoint-down(sm) {
      display: flex;
      margin-top: var(--spacing-unit);
    }

    #logo {
      margin-bottom: 0;

      svg {
        fill: var(--fg-color);
        width: 120px;
        @include media-breakpoint-up(sm) { width: 180px; }
      }
    }

    .toggle-nav {
      @include media-breakpoint-up(sm) { display: none; }
      padding: 0;
      border: none;
      background: none;

      .anicon {
        font: 36px "Anicons Regular", sans-serif;
        font-variation-settings: "TIME" 1;
        transition: font-variation-settings .4s ease;
        color: var(--primary-color);
        -webkit-user-select: none;
        user-select: none;
      }

      &.close .anicon {
        font-variation-settings: "TIME" 100;
      }
    }
  }

  #sidebar-headings {
    @include media-breakpoint-down(sm) {
      position: absolute;
      width: 100%;
      left: 0;
      padding: 0 calc(var(--spacing-unit) * .5);
      background-color: var(--bg-color);
    }

    @include media-breakpoint-up(sm) {
      display: block;
    }

    &.collapsing {
      transition: height .4s ease-in-out;
    }

    :last-child {
      @include media-breakpoint-down(sm) { margin-bottom: calc(var(--spacing-unit)); }
    }

    h2 {
      font-size: 2rem;

      &.active {
        color: var(--primary-color);
      }
    }
  }
}

#footer {
  z-index: 1;

  h2 {
    font-size: 2rem;
  }
}

#content {
  @include media-breakpoint-down(sm) { margin-top: var(--spacing-unit); }

  p, ul {
    margin-bottom: var(--spacing-unit);
  }

  .col {
    @include media-breakpoint-down(md) { flex: auto; }
  }

  .post-content {
    width: auto;
    @include media-breakpoint-up(md) { width: 40%; }
    @include media-breakpoint-down(sm) { margin-bottom: var(--spacing-unit); }

    .sticky-top {
      @include media-breakpoint-down(md) {
        position: static;
        top: auto;
      }

      >:last-child {
        @include media-breakpoint-up(sm) { margin-bottom: 0; }
      }
    }

    .post-info {
      @include list-unstyled();
    }
  }

  .image-list {
    @include media-breakpoint-down(md) { margin-bottom: var(--spacing-unit); }

    figure {
      margin-bottom: var(--spacing-unit);

      &:last-child {
        @include media-breakpoint-up(md) { margin-bottom: 0; }
      }
    }
  }

  #carousel {
    .carousel-item {
      height: calc(100vh - var(--footer-height) - var(--spacing-unit) - 100px);
      @include media-breakpoint-up(sm) { height: calc(100vh - var(--spacing-unit) * 2); }
      min-height: 320px;
      align-items: center;
      overflow: hidden;
      transition: opacity 2s ease;

      &:not(.show) {
        display: none;
      }

      &:not(.visible) {
        opacity: 0;
      }
    }

    a {
      &, figure {
        height: inherit
      }

      @include hover-img-scale();
    }

    figure {
      display: flex;
      position: relative;
      align-items: center;
      justify-content: center;

      img {
        object-fit: cover;
        min-height: 100%;
        min-height: #{"min(80vw, 100%)"};
        max-width: #{"min(140vh, 100%)"};
      }
    }
  }

  #section {
    @include media-breakpoint-down(sm) { margin-bottom: var(--spacing-unit); }

    a {
      @include hover-img-scale();
    }

    figure {
      margin-bottom: 0;
    }

    .section-post {
      margin-bottom: var(--spacing-unit);

      &:last-child {
        @include media-breakpoint-up(sm) { margin-bottom: 0; }
      }

      .image-list {
        margin-bottom: 0;
      }
    }

    .section-post-titles {
      display: none;
      @include media-breakpoint-up(md) {
        display: flex;
        align-items: center;
      }

      .post-meta >:last-child {
        @include media-breakpoint-up(sm) { margin-bottom: 0; }
      }
    }
  }

  #about {
    .about-post {
      margin-bottom: 40px;
      @include media-breakpoint-up(md) { margin-bottom: 60px; }

      &:last-child {
        @include media-breakpoint-up(sm) { margin-bottom: 0; }
      }

      .about-post-titles {
        @include media-breakpoint-down(md) {
          display: block;
          width: auto;
          margin-bottom: var(--spacing-unit);
        }
      }

      .col >:last-child {
        margin-bottom: 0;
      }
    }

    .about-team >:last-child {
      ul, img {
        margin-bottom: 0;
      }
    }

    .about-member {
      align-items: center;
      margin-bottom: var(--spacing-unit);

      &:last-child {
        @include media-breakpoint-up(sm) { margin-bottom: 0; }
      }

      .avatar {
        clip-path: circle(40px at center);
        width: 80px;
        display: inline-block;
      }

      .profile {
        @include list-unstyled();
        margin: 0 0 0 1rem;
        margin: 0 0 0 #{"max(1rem, 5%)"};

        :first-child {
          margin-bottom: 6px;
        }
      }
    }
  }
}

